--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "cors": "^2.8.5",
+    "ejs": "^2.6.1",
+    "nodemon": "^1.18.10"
   },
   "engines": {
     "node": "8.x"
